test/oscar/compiler/errors/invalidBroadcastOp.oscar
message testNow()


actor Tester() {

  receive = {
    | testNow() => {
        Println("Error");
      }
    | die() => {
      }
  }
}

def main() => unit = {
  actor<Tester> tester1 = spawn actor<Tester>();
  message<testNow>() |>> tester1;
  message<die>() |> tester1;
}
